objects/Opportunity_Role__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName + ' ' +  Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Roles</relationshipLabel>
        <relationshipName>Opportunity_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Roles</relationshipLabel>
        <relationshipName>Opportunity_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>Choose the role of main point of contact for the Opportunity</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                    <default>true</default>
                    <label>Influencer</label>
                </value>
                <value>
                    <fullName>Primary Member</fullName>
                    <label>Main Contact</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>This object is created due to need of customize business roles for opportunity</description>
    <label>Opportunity Role</label>
    <nameField>
        <displayFormat>OR-{000000}</displayFormat>
        <label>Opportunity Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>